--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-html{
+html {
   scroll-behavior: smooth;
-
 }
 body {
   font-family: "Montserrat", sans-serif;
 }
-header {
+a:link,
+a:visited,
+a:active {
+  text-decoration: none;
+}
+.portada {
   color: white;
   text-align: center;
 
@@ -31,75 +35,152 @@ header {
   background-repeat: no-repeat;
   background-position: center;
 }
-
+.container-custom {
+  width: 92%;
+  margin: 1rem auto;
+  /* overflow: hidden; */
+}
 .titulo_nombre {
-     font-size: 2rem;
-     font-weight: 700;
+  font-size: 2rem;
+  font-weight: 700;
 }
 .titulo_carrera {
-     font-size: 1.5rem;
-     font-weight: 500;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 .especialidades {
-     font-size: 1rem;
-     font-weight: 300;
+  font-size: 1rem;
+  font-weight: 300;
 }
 .subtitulo {
-     font-size: 2rem;
-     font-weight: 700;
+  font-size: 2.5rem;
+  font-weight: 900;
 }
 .subtitulo-h4 {
-     font-size: 1.5rem;
-     font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
-.btn-color-custom{
-     background-color: rgb(108, 99, 255);
-     border-color: rgb(108, 99, 255);
-     transition: all ease .5s;
+.btn-color-custom {
+  background-color: rgb(108, 99, 255);
+  border-color: rgb(108, 99, 255);
+  transition: all ease 0.5s;
 }
-.btn-color-custom:hover{
-     background-color: rgb(63, 58, 155);
-     border-color: rgb(63, 58, 155);
+.btn-color-custom:hover {
+  background-color: rgb(63, 58, 155);
+  border-color: rgb(63, 58, 155);
 }
 /* cards */
 .card-custom {
-     padding: 1rem;
-     border: 1px solid #e1e1e1;
-     background-color: #fff;
-     margin: 1rem 0;
-     border-radius: 1rem;
-     box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.137);
+  padding: 1rem;
+  border: 1px solid #e1e1e1;
+  background-color: #fff;
+  margin: 1rem 0;
+  border-radius: 1rem;
+  box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.137);
 }
 
 .card-img {
-     width: 100%;
-     height: 300px;
-     border-radius: .5rem;
-    /*  object-fit: ; */
-     /* box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.219); */
-     /* margin-bottom: 1rem; */
+  width: 100%;
+  height: 300px;
+  border-radius: 0.5rem;
 }
-.card-font{
-     width: 100%;
-     height: 300px;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     font-size:5rem;
+.card-font {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 5rem;
 }
 .card-footer-custom {
-     font-size:1rem; 
-     text-align: center;
-     background: white;
+  font-size: 1rem;
+  text-align: center;
+  background: white;
 }
-.card-name h4 {
-     margin-top: 0.5em;
-     margin-bottom: 0.5em;
-     font-weight: 500;
+.card-name {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  font-weight: 500;
 }
 .card-description {
-     margin-top: 0.5em;
-     margin-bottom: 0.5em;
-     color: rgb(121, 120, 122);
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  color: rgb(121, 120, 122);
 }
 
+/* cards proyect */
+.efecto-proyect {
+  transition: all 0.5s;
+}
+.card-proyect-custom {
+  margin: 2rem 1rem;
+  background-color: #fff;
+  border-radius: 1rem;
+  /*  max-height: 700px; */
+  position: relative; /*  */
+  cursor: pointer;
+}
+
+.card-proyect-custom img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1em;
+  margin: 1rem auto;
+  -webkit-box-shadow: 0px 7px 33px -8px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 7px 33px -8px rgba(0, 0, 0, 0.57);
+  box-shadow: 0px 7px 33px -8px rgba(0, 0, 0, 0.342);
+  object-position: center;
+  object-fit: contain;
+  display: block;
+}
+.card-proyect-hover {
+  position: absolute; /* para que flote encima */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: scale(0); /* oculta el efecto hover */
+  background-color: rgba(63, 61, 117, 0.349);
+  transition: transform 0.5s;
+  display: flex !important;
+  /* centra perfectamento dentro del contenedor */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 1em;
+}
+
+.card-circle-span {
+  text-decoration: none;
+  width: 100px;
+  height: 100px;
+  background-color: rgba(42, 35, 136, 0.562);
+  display: flex;
+  /* centra perfectamento dentro del contenedor */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: all 0.5s;
+}
+.card-circle-span:hover {
+  background-color: rgb(75, 66, 250);
+}
+.card-circle-span i {
+  color: white;
+  font-size: 2rem;
+}
+
+.card-proyect-name h4 {
+  text-align: center;
+  margin: 1rem auto;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.efecto-proyect:hover {
+  transform: scale(1.1);
+}
+.card-proyect-custom:hover .card-proyect-hover {
+  transform: scale(1);
+}
