--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,7 +3,7 @@ head
      // Required meta tags
      meta(charset='utf-8')
      meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
-     link(rel='shortcut icon' href='/img/gato.ico' type='image/x-icon')
+     link(rel='shortcut icon' href='img/gato.ico' type='image/x-icon')
      // Bootstrap CSS
      link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' integrity='sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk' crossorigin='anonymous')
      script(src='https://kit.fontawesome.com/b5b7f00aae.js' crossorigin='anonymous')     
@@ -14,7 +14,7 @@ body
      header
           nav.navbar.navbar-expand-md.navbar-light.bg-light.fixed-top
                a.navbar-brand(href='#')
-                    img.d-inline-block.align-top(src='/img/gato.ico' width='30' height='30' alt='' loading='lazy')
+                    img.d-inline-block.align-top(src='img/gato.ico' width='30' height='30' alt='' loading='lazy')
                     |  ChichoProyects
                button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
                     span.navbar-toggler-icon
@@ -31,24 +31,24 @@ body
                          li.nav-item
                               a.nav-link(href='#Contacto') Contacto
           br
-          .container
-               .row.my-4
-                    .col-md-12
-                         .d-flex.flex-column.justify-content-center.align-items-center.p-4      
-                              div.rounded-circle.my-4
-                                   img(src="img/logo.png" alt="alt" class=(""))
-                              h4.titulo_nombre.my-4 Maximo Junior Apaza Chirhuana
-                              h1.titulo_carrera.my-2  
-                                   span.typed
-                              h4.especialidades.my-2 Laravel | Node JS
-                              h4.especialidades.my-2 React-JS | Boostrap | MySql | MongoDB | Git
-                              br
-                              button.btn.btn-lg.btn-success.btn-color-custom Contactame
+          br
+          .portada
+               .container
+                    .d-flex.flex-column.justify-content-center.align-items-center
+                         div.rounded-circle.my-4
+                              img(src="img/logo.png" alt="alt" class=(""))
+                         h4.titulo_nombre.my-4 Maximo Junior Apaza Chirhuana
+                         h1.titulo_carrera.my-2  
+                              span.typed
+                         h4.especialidades.my-2 Laravel | Node JS
+                         h4.especialidades.my-2 React-JS | Boostrap | MySql | MongoDB | Git
+                         br
+                         button.btn.btn-lg.btn-success.btn-color-custom Contactame
      hr
      main.container.my-4
           h2.text-center.my-4.subtitulo(id="SobreMi") Sobre Mí
           .row
-               .col-md-6.p-3
+               .col-md-6.p-3.d-flex.flex-column.justify-content-center.align-items-center
                     img.img-fluid(src="img/sobremi.svg" alt="alt")
                .col-md-6.p-3.text-justify
                     h4.subtitulo-h4.my-2 Algunas Palabras...
@@ -76,14 +76,58 @@ body
                     p SQL
                          .progress
                               .progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='75' aria-valuemin='0' aria-valuemax='100' style='width: 75%') 90%
-
-
-
-
                .col-md-6.p-3.text-justify
                     img.img-fluid(src="img/lenguajes2.svg" alt="alt")
 
-          hr
+          hr          
+     section.container-custom.my-4
+          h2.text-center.my-4.subtitulo(id="Proyectos")  Mis Proyectos
+          .row
+               .col-md-6.col-lg-6
+                    .efecto-proyect
+                         .card-proyect-custom  
+                              img.img-fluid(src="img/proyect2.svg" alt="alt" loading="lazy")
+                              .card-proyect-hover
+                                   a.card-circle-span(href="#")
+                                        <i class="fas fa-link"></i>
+                         .card-proyect-name.text-center
+                              h4 Tiendas Virtuales
+               .col-md-6.col-lg-6
+                    .efecto-proyect
+                         .card-proyect-custom  
+                              img.img-fluid(src="img/proyect2.svg" alt="alt" loading="lazy")
+                              .card-proyect-hover
+                                   a.card-circle-span(href="#")
+                                        <i class="fas fa-link"></i>
+                         .card-proyect-name.text-center
+                              h4 App de Encuestas
+               .col-md-6.col-lg-6
+                    .efecto-proyect
+                         .card-proyect-custom  
+                              img.img-fluid(src="img/proyect2.svg" alt="alt" loading="lazy")
+                              .card-proyect-hover
+                                   a.card-circle-span(href="#")
+                                        <i class="fas fa-link"></i>
+                         .card-proyect-name.text-center
+                              h4 Modulos para Wari HC
+
+               .col-md-6.col-lg-6
+                    .efecto-proyect
+                         .card-proyect-custom  
+                              img.img-fluid(src="img/proyect2.svg" alt="alt" loading="lazy")
+                              .card-proyect-hover
+                                   a.card-circle-span(href="#")
+                                        <i class="fas fa-link"></i>
+                         .card-proyect-name.text-center
+                              h4 Sistemas de Ventas Web
+
+          .row.my-4
+               .col-lg-3
+               .col-lg-6
+                    button.btn.btn-lg.btn-block.btn-success.btn-color-custom Ver Todos los Proyectos
+               .col-lg-3   
+          hr.container
+     section.container.my-4
           h2.text-center.my-4.subtitulo(id="Servicios") Mis Servicios   
           .row    
                .col-lg-4
@@ -113,43 +157,11 @@ body
                                    h4 Soporte de Proyectos
                               .card-description     
                                    p Optimizacion y Soluciones de Codigo
-
           hr
-          h2.text-center.my-4.subtitulov(id="Proyectos")  Mis Proyectos
-          .row
-               .col-md-6.col-lg-4
-                    .card-custom
-                         img.card-img.img-fluid(src="img/lenguajes2.svg" alt="alt" loading="lazy")
-                         .card-footer-custom
-                              .card-name
-                                   h4 Algun Nombre
-                              .card-description     
-                                   p Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, repudiandae.
-                              button.btn.btn-lg.btn-success.btn-color-custom <i class="far fa-eye"></i> Ver
+     section.container.my-4
+          h2.text-center.my-4.subtitulo(id="Contacto") Contacto
 
-               .col-md-6.col-lg-4
-                    .card-custom
-                         img.card-img.img-fluid(src="img/proyect2.svg" alt="alt" loading="lazy")
-                         .card-footer-custom
-                              .card-name
-                                   h4 Algun Nombre
-                              .card-description     
-                                   p Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, repudiandae.
-                              button.btn.btn-lg.btn-success.btn-color-custom <i class="far fa-eye"></i> Ver
-               .col-md-6.col-lg-4
-                    .card-custom
-                         img.card-img.img-fluid(src="img/proyect3.svg" alt="alt" loading="lazy")
-                         .card-footer-custom
-                              .card-name
-                                   h4 Algun Nombre
-                              .card-description     
-                                   p Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, repudiandae.
-                              button.btn.btn-lg.btn-success.btn-color-custom <i class="far fa-eye"></i> Ver
-          .row.my-2
-               .col-lg-3
-               .col-lg-6
-                    button.btn.btn-lg.btn-block.btn-success.btn-color-custom Ver Todos los Proyectos
-               .col-lg-3
+
 script(src='https://cdn.jsdelivr.net/npm/typed.js@2.0.11')
 script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
 script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
