--- a/pug/index.pug
+++ b/pug/index.pug
@@ -7,6 +7,7 @@ head
      // Bootstrap CSS
      link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' integrity='sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk' crossorigin='anonymous')
      script(src='https://kit.fontawesome.com/b5b7f00aae.js' crossorigin='anonymous')     
+     link(rel='stylesheet' href='css/spinner.css' crossorigin='anonymous')
      link(rel='stylesheet' href='css/styles.css' crossorigin='anonymous')
 
      title ChichoProyects &#x1F639;
@@ -18,7 +19,7 @@ body
                     |  ChichoProyects
                button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
                     span.navbar-toggler-icon
-               #navbarNav.collapse.navbar-collapse.float-rigth
+               #navbarNav.collapse.navbar-collapse.float-right
                     ul.navbar-nav.ml-auto
                          li.nav-item.active
                               a.nav-link(href='#SobreMi')
@@ -32,24 +33,25 @@ body
                               a.nav-link(href='#Contacto') Contacto
           br
           br
-          .portada
+          .portada.p-4
                .container
                     .d-flex.flex-column.justify-content-center.align-items-center
                          div.rounded-circle.my-4
                               img(src="img/logo.png" alt="alt" class=(""))
-                         h4.titulo_nombre.my-4 Maximo Junior Apaza Chirhuana
-                         h1.titulo_carrera.my-2  
+                         h1.titulo_nombre.my-4 Maximo Junior Apaza Chirhuana
+                         h3.titulo_carrera.my-2
                               span.typed
-                         h4.especialidades.my-2 Laravel | Node JS
-                         h4.especialidades.my-2 React-JS | Boostrap | MySql | MongoDB | Git
+                         h4.especialidades.my-2.f-20 Laravel | Node JS
+                         h4.especialidades.my-2.f-20 React-JS | Boostrap | MySql | MongoDB | Git
                          br
-                         button.btn.btn-lg.btn-success.btn-color-custom Contactame
-     hr
+                         button.btn.btn-lg.btn-color-custom.f-20 Contactame
+
+
      main.container.my-4
           h2.text-center.my-4.subtitulo(id="SobreMi") Sobre Mí
           .row
                .col-md-6.p-3.d-flex.flex-column.justify-content-center.align-items-center
-                    img.img-fluid(src="img/sobremi.svg" alt="alt")
+                    img.img-fluid(src="img/sobremi.svg" alt="alt" loading="lazy")
                .col-md-6.p-3.text-justify
                     h4.subtitulo-h4.my-2 Algunas Palabras...
                     p Soy un joven #[b muy responsable], feliz e interesante de conocer. Mi mayor caracteristica es mi curiosidad por aprender cosas nuevas y eso me dado muchos beneficios.
@@ -58,10 +60,24 @@ body
 
                     p Me gusta compartir mis conocimientos enseñando a lo demas de esa manera uno repasa indirectamente.
                     .text-center                        
-                         button.btn.btn-lg.btn-success.btn-color-custom 
+                         button.btn.btn-lg.btn-color-custom 
                               |<i class="far fa-file-alt"></i> Descargar CV
 
-          hr
+          .row
+               .col-md-6.p-3
+                    h4.subtitulo-h4.my-2.text-left Una breve descripcion...
+                    p Soy un joven #[b muy responsable], feliz e interesante de conocer. Mi mayor caracteristica es mi curiosidad por aprender cosas nuevas y eso me dado muchos beneficios.
+
+                    p Soy desarrollador web, me fascina la programacion y la informatica #[b desde los 16 años.] Me encanta investigar sobre tecnologias nuevas y todo lo relacionando con el internet.
+
+                    p Me gusta compartir mis conocimientos enseñando a lo demas de esa manera uno repasa indirectamente.
+
+               .col-md-6.p-3.d-flex.flex-column.justify-content-center.f-19
+                    p #[i.fas.fa-user-tie.color-principal] #[b Edad Actual :]  #[span(id="edad") 28]
+                    p #[i.fas.fa-map-marked-alt.color-principal] #[b Ubicación :] Lima, Perú
+                    p #[i.fas.fa-laptop-code.color-principal] #[b Stack :] Node JS,React Js,Mysql
+                    p #[i.fas.fa-grin-hearts.color-principal] #[b Intereses :] Desarrollo Web,Musica Rock,Videojuegos
+
           h2.text-center.my-4.subtitulo  Mis Habilidades
           .row
                .col-md-6.p-3
@@ -76,12 +92,12 @@ body
                     p SQL
                          .progress
                               .progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='75' aria-valuemin='0' aria-valuemax='100' style='width: 75%') 90%
-               .col-md-6.p-3.text-justify
+               .col-md-6.p-3.text-justify.d-flex.flex-column.justify-content-center.align-items-center
                     img.img-fluid(src="img/lenguajes2.svg" alt="alt")
 
           hr          
      section.container-custom.my-4
-          h2.text-center.my-4.subtitulo(id="Proyectos")  Mis Proyectos
+          h2.text-center.my-4.subtitulo(id="Proyectos")  Proyectos Destacados
           .row
                .col-md-6.col-lg-6
                     .efecto-proyect
@@ -124,13 +140,13 @@ body
           .row.my-4
                .col-lg-3
                .col-lg-6
-                    button.btn.btn-lg.btn-block.btn-success.btn-color-custom Ver Todos los Proyectos
+                    button.btn.btn-lg.btn-block.btn-color-custom Ver Todos los Proyectos
                .col-lg-3   
           hr.container
      section.container.my-4
           h2.text-center.my-4.subtitulo(id="Servicios") Mis Servicios   
           .row    
-               .col-lg-4
+               .col-md-4.col-lg-4
                     .card-custom
                          .card-font
                               <i class="fas fa-code"></i>
@@ -138,8 +154,8 @@ body
                               .card-name
                                    h4 Desarrollo Frontend
                               .card-description     
-                                   p Hermosas e Impresionantes Paginas Responsivas
-               .col-lg-4
+                                   p Impresionantes Paginas Responsivas
+               .col-md-4.col-lg-4
                     .card-custom
                          .card-font
                               <i class="fas fa-server"></i>
@@ -148,7 +164,7 @@ body
                                    h4 Desarrollo Backend
                               .card-description     
                                    p API REST con Node JS, Laravel
-               .col-lg-4
+               .col-md-4.col-lg-4
                     .card-custom
                          .card-font
                               <i class="fas fa-laptop-code"></i>
@@ -160,10 +176,23 @@ body
           hr
      section.container.my-4
           h2.text-center.my-4.subtitulo(id="Contacto") Contacto
-
+          .row
+               .col-md-6
+                    .form-group
+                         label(for='nombre_form') Nombre:
+                         input#nombre_form.form-control(type='text' name='' placeholder='Ingrese su nombre')
+                         label(for='form_correo') Correo:
+                         input#form_correo.form-control(type='text' name='' placeholder='Ingrese su correo')
+                         label(for='form_mensaje') Mensaje:
+                         textarea#form_mensaje.form-control(name='' placeholder='Ingrese algun mensaje' rows="3" cols="10")
+                    .text-left
+                         button.btn.btn-block.btn-lg.btn-color-custom <i class="fas fa-paper-plane"></i> Enviar Mensaje
+               .col-md-6.d-flex.flex-column.justify-content-center.align-items-center.d-sm-none.d-md-flex
+                    img.img-fluid(src="img/contact.svg" alt="alt" loading="lazy")
 
 script(src='https://cdn.jsdelivr.net/npm/typed.js@2.0.11')
 script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
 script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
 script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous')
 script(src='js/configuraciontyped.js')
+script(src='js/scripts.js')
