solucion de padding

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -33,7 +33,7 @@ body
                               a.nav-link(href='#Contacto') Contacto
           br
           br
-          .portada.p-4
+          .portada.p-4-custom
                .container
                     .d-flex.flex-column.justify-content-center.align-items-center
                          div.rounded-circle.my-4
