--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ a:visited,
 a:active {
   text-decoration: none;
 }
+.p-4-custom {
+  padding: 1.25rem !important;
+}
+@media (max-width: 576px) {
+  .p-4-custom {
+    padding: 0 !important;
+  }
+}
 .f-18 {
   font-size: 1.125rem !important;
 }
