falta dar funcionalidad y footer

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -38,7 +38,7 @@ body
                     .d-flex.flex-column.justify-content-center.align-items-center
                          div.rounded-circle.my-4
                               img(src="img/logo.png" alt="alt" class=(""))
-                         h1.titulo_nombre.my-4 Maximo Junior Apaza Chirhuana
+                         h1.titulo_nombre.my-4.h2 Maximo Junior Apaza Chirhuana
                          h3.titulo_carrera.my-2
                               span.typed
                          h4.especialidades.my-2.f-20 Laravel | Node JS
