--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,8 +5,8 @@ head
      meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
      link(rel='shortcut icon' href='img/gato.ico' type='image/x-icon')
      // Bootstrap CSS
-     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css' integrity='sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk' crossorigin='anonymous')
-     script(src='https://kit.fontawesome.com/b5b7f00aae.js' crossorigin='anonymous')     
+     link(rel='stylesheet' href='css/bootstrap.min.css' integrity='sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk' crossorigin='anonymous')
+     script(src='js/fontawesome_personal.js' crossorigin='anonymous')     
      link(rel='stylesheet' href='css/bootstrap_custom.css' crossorigin='anonymous')
      link(rel='stylesheet' href='css/styles.css' crossorigin='anonymous')
 
@@ -203,9 +203,9 @@ body
 
 
 
-script(src='https://cdn.jsdelivr.net/npm/typed.js@2.0.11')
-script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
-script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
-script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous')
+script(src='js/typed.js')
+script(src='js/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous')
+script(src='js/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous')
+script(src='js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous')
 script(src='js/configuraciontyped.js')
 script(src='js/scripts.js')
